--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: withastro/action@v3
         with:
           node-version: 20
-          package-manager: pnpm@latest
+          package-manager: pnpm
           install-command: pnpm install --no-frozen-lockfile
 
   deploy:
