--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Ensure @fontsource-variable/onest is installed
+        run: pnpm add @fontsource-variable/onest
+
       - name: Build with Astro
         run: pnpm build
 
